--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <video poster="" id="tree" autoplay controls muted loop height="100%" preload="metadata">
-          <source src="static/videos/banner_video.mp4" type="video/mp4">
+          <source src="static/videos/demo_putball.mp4" type="video/mp4">
         </video>
         <h2 class="subtitle has-text-centered">
-          Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+          Leveraging large language models for code-driven geometric object parameterization and trajectory synthesis, the EmbodiedCoder framework enables a training-free approach to robotic manipulation. This system autonomously executes complex, long-horizon tasks in unstructured environments, demonstrating robust generalization to novel objects and scenes.
         </h2>
       </div>
     </div>
