--- a/index.html
+++ b/index.html
@@ -229,21 +229,21 @@
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
          <div class="item">
-         <img src="static/images/carousel1.jpg" alt="First research result visualization" loading="lazy"/>
+         <img src="static/images/highlight.svg" alt="First research result visualization" loading="lazy"/>
          <h2 class="subtitle has-text-centered">
-           First image description.
+           An illustrative overview of the framework's key components, demonstrating the training-free approach to solve complex tasks such as opening a door.
          </h2>
        </div>
        <div class="item">
-         <img src="static/images/carousel2.jpg" alt="Second research result visualization" loading="lazy"/>
+         <img src="static/images/Pipeline.svg" alt="Second research result visualization" loading="lazy"/>
          <h2 class="subtitle has-text-centered">
-           Second image description.
+           Overview of the EmbodiedCoder system pipeline, from user instructions to task execution.
          </h2>
        </div>
        <div class="item">
-         <img src="static/images/carousel3.jpg" alt="Third research result visualization" loading="lazy"/>
+         <img src="static/images/Objects GeoParam.svg" alt="Third research result visualization" loading="lazy"/>
          <h2 class="subtitle has-text-centered">
-          Third image description.
+          Geometric parameterization of diverse objects for code-driven robotic manipulation.
         </h2>
       </div>
       <div class="item">
