--- a/index.html
+++ b/index.html
@@ -224,38 +224,44 @@
     </div>
   </section>
 
-  <section class="hero is-small">
-    <div class="hero-body">
-      <div class="container">
-        <div id="results-carousel" class="carousel results-carousel">
-         <div class="item">
-         <img src="static/images/highlight.svg" alt="First research result visualization" loading="lazy"/>
-         <h2 class="subtitle has-text-centered">
-           An illustrative overview of the framework's key components, demonstrating the training-free approach to solve complex tasks such as opening a door.
-         </h2>
-       </div>
-       <div class="item">
-         <img src="static/images/Pipeline.svg" alt="Second research result visualization" loading="lazy"/>
-         <h2 class="subtitle has-text-centered">
-           Overview of the EmbodiedCoder system pipeline, from user instructions to task execution.
-         </h2>
-       </div>
-       <div class="item">
-         <img src="static/images/Objects GeoParam.svg" alt="Third research result visualization" loading="lazy"/>
-         <h2 class="subtitle has-text-centered">
-          Geometric parameterization of diverse objects for code-driven robotic manipulation.
-        </h2>
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item">
+          <div class="columns is-centered">
+            <div class="column is-four-fifths has-text-centered">
+              <img src="static/images/highlight.svg" alt="First research result visualization" loading="lazy" style="max-width: 100%; height: auto;"/>
+              <h2 class="subtitle has-text-centered">
+                An illustrative overview of the framework's key components, demonstrating the training-free approach to solve complex tasks such as opening a door.
+              </h2>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="columns is-centered">
+            <div class="column is-four-fifths has-text-centered">
+              <img src="static/images/Pipeline.svg" alt="Second research result visualization" loading="lazy" style="max-width: 100%; height: auto;"/>
+              <h2 class="subtitle has-text-centered">
+                Overview of the EmbodiedCoder system pipeline, from user instructions to task execution.
+              </h2>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="columns is-centered">
+            <div class="column is-four-fifths has-text-centered">
+              <img src="static/images/Objects GeoParam.svg" alt="Third research result visualization" loading="lazy" style="max-width: 100%; height: auto;"/>
+              <h2 class="subtitle has-text-centered">
+                Geometric parameterization of diverse objects for code-driven robotic manipulation.
+              </h2>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="item">
-       <img src="static/images/carousel4.jpg" alt="Fourth research result visualization" loading="lazy"/>
-       <h2 class="subtitle has-text-centered">
-         Fourth image description.
-       </h2>
-     </div>
-   </div>
-   </div>
-   </div>
-  </section>
+    </div>
+  </div>
+</section>
 
   <section class="hero is-small is-light">
     <div class="hero-body">
